@@ -1,6 +1,10 @@
+2011-01-22  Bruno  <bruno.pincon@iecn.u-nancy.fr>
+
+	* add kron (.*.) for sparse (and a small test for kron in sparse-nsp.tst)
+
 2011-01-08  Bruno  <bruno.pincon@iecn.u-nancy.fr>
 
-	* add intg_splin to integrate a spline or sub-spline.
+	* add intg_splin to integrate a spline or a sub-spline.
 
 2010-08-09  Jean-Philippe Chancelier  <jpc@cermics.enpc.fr>
 
